--- a/src/DocBundle/Resources/views/parametrage/show.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/show.html.twig
@@ -51,7 +51,7 @@
                             </tr>
                             <tr>
                                 <th>Pdfsource</th>
-                                <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">{{ parametrage.lastPdfSource.title }}</a></td>
+                                <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">Voir le pdf</a></td>
                             </tr>
                         </tbody>
                     </table>
