fix(param): edit param creating form

--- a/src/DocBundle/Resources/views/parametrage/form.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/form.html.twig
@@ -86,8 +86,7 @@
         </div>
         <input type="hidden" value="{{ app.request.getBaseURL() }}" id="baseUrl">
     </div>
-    <div class="liasse-pdfs">
-
+    <div class="liasse-pdfs hide">
     </div>
 
     {{ form_rest(form) }}
