--- a/src/DocBundle/Resources/views/parametrage/new.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/new.html.twig
@@ -10,7 +10,7 @@
                     </h3>
                 </div>
                 <div class = "panel-body">
-                    <h3><span class="label label-default">Pour les liasses, cochez les documents qui seront inclus dans la liasse et siasissez l'ordre.</span></h3>
+                    <h3><span class="label label-default">Pour les liasses, cochez les documents qui seront inclus dans la liasse et saisissez l'ordre.</span></h3>
                     <div class="well">
                         {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
