fix(core): correct some typing errors

--- a/src/DocBundle/Resources/views/reseau/history.html.twig
+++ b/src/DocBundle/Resources/views/reseau/history.html.twig
@@ -16,7 +16,7 @@
             {% else %}
                 <div class = "panel-heading">
                     <h3 class = "panel-title">
-                        <i class="glyphicon glyphicon-th-list"></i> L'historiques du réseau {{ reseau.name }}.
+                        <i class="glyphicon glyphicon-th-list"></i> Historiques du réseau {{ reseau.name }}.
                     </h3>
                 </div>
                 <div class = "panel-body">
