--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -65,7 +65,7 @@
             <vr></vr>
             <div class="col-sm-4">
                 <span class="">
-                    Si vous n'avez pas de compte utilisateur, vous devez demandeer la création à l'administrateur.
+                    Si vous n'avez pas de compte utilisateur, vous devez demander la création à l'administrateur.
                     <hr>
                     Vous pouvez également consulter le paramétrage en connectant avec le compte
                     <form action="{{ path("fos_user_security_check") }}" method="post">
