--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}CNPNet{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap-theme.min.css">
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-            <link rel="stylesheet" href="//cdn.datatables.net/1.10.10/css/dataTables.bootstrap.min.css">
+            <link rel="stylesheet" href="{{ asset('Resources/public/css/bootstrap-theme.css') }}">
+            <link rel="stylesheet" href="{{ asset('Resources/public/css/bootstrap.css') }}">
+            <link rel="stylesheet" href="{{ asset('Resources/public/css/dataTables.bootstrap.css') }}">
             {% stylesheets '@DocBundle/Resources/public/css/*' filter='cssrewrite' %}
                 <link rel="stylesheet" href="{{ asset_url }}" />
             {% endstylesheets %}
@@ -127,10 +127,10 @@
 
 
         {% block javascripts %}
-            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-            <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-            <script src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
-            <script src="//cdn.datatables.net/1.10.10/js/dataTables.bootstrap.min.js"></script>
+            <script src="{{ asset('Resources/public/js/jquery-1.12.2.js') }}"></script>
+            <script src="{{ asset('Resources/public/js/bootstrap.js') }}"></script>
+            <script src="{{ asset('Resources/public/js/jquery.dataTables.js') }}"></script>
+            <script src="{{ asset('Resources/public/js/dataTables.bootstrap.js') }}"></script>
             {% javascripts '@DocBundle/Resources/public/js/*' %}
                 <script src="{{ asset_url }}"></script>
             {% endjavascripts %}
